[package]
name = "core"
version = "0.1.0"
authors = ["Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { git = "https://github.com/tobz1000/rust-itertools", branch = "permutations" }
